Revision history for MIDI-Drummer

{{$NEXT}}

0.4011 2022-11-20 15:26:04
    Improve the eg/black-page program.

0.4010 2022-11-20 12:42:12
    - Remove the double-counting from the ->pattern method.

0.4009 2022-11-20 12:37:47
    - Fix duration size computation for beat counting.
    - Improve test.

0.4008 2022-11-20 10:34:59
    - Made beat counting automatic.
    - Improve documentation.

0.4007 2022-11-13 07:54:23
    - Allow flam() to rest for the grace-note.

0.4006 2022-11-13 06:47:25
    - Finish the eg/black-page program transcription.

0.4005 2022-11-08 11:31:21
    - Add the eg/black-page program.
    - Add an optional patch and accent value to the flam() method.
    - Improve documentation.

0.4004 2022-11-07 13:56:25
    - Improve tests!

0.4003 2022-11-04 12:39:07
    - Add the set_bpm() method.
    - Add the eg/metric-modulation program.

0.4002 2022-10-23 08:17:44
    - Add actual tests for add_fill().
    - Add * note to the not-yet-ready-for-primetime add_fill() method.
    - Avoid implicit imports.

0.4001 2022-05-30 12:11:34
    - Improve documentation.
    - Actually add the fill-replaced phrase to the score. Whoops :)

0.4000 2022-05-30 10:57:58
    - Add verbose mode finally.
    - Add the add_fill() method!

0.3003 2022-05-29 15:02:26
    - Compute the size and duration in the pattern() method.

0.3002 2022-05-28 22:02:12
    - Add the sync_patterns() method to execute the patterns() method for multiple voices.
    - Improve documentation.

0.3001 2022-05-28 17:07:43
    - Include the missing Math::Bezier in the prerequisites.

0.3000 2022-05-28 16:59:11
    - Pass the object itself to the callback in combinatorial().
    - Port the patterns() method from Syncopate::combinatorial().
    - Reduce the reverb!!

0.2101 2022-05-15 17:15:16
    - Refactor *::Syncopate to use attributes.
    - Remove syncopation SYNOPSIS leftover examples.

0.2100 2022-05-01 16:38:40
    - Move the syncopation logic to its own module.

0.2012 2022-05-01 11:04:22